--- a/sample.env
+++ b/sample.env
@@ -1,7 +1,7 @@
-API_ID=
-API_HASH=
-BOT_TOKEN=
-LOGGER_ID=
-MONGO_DB_URI=
-OWNER_ID=
-STRING_SESSION=
+API_ID=22920902
+API_HASH=9b6416fcccd2b728f1661877ca9a14cf
+BOT_TOKEN=7159443739:AAHIImgrqSDtVFiE8E3Hv6w_EaxkA75p-zQ
+LOGGER_ID=-1002095596112
+MONGO_DB_URI=mongodb+srv://arfin01:Arkaku123@cluster0.s2drx4p.mongodb.net/?retryWrites=true&w=majority
+OWNER_ID=6995317382
+STRING_SESSION=BQGXyHkAaWtOXmXXdTWB0ulkTpU40NDnB80lLGNAUCZ-6XLjXwqI_ZG4tGM2zk27Q2uRIROC8BEpg-bERVyTHvDpevLOzQz2eX2NrRu71iCfL7aKN5YN4H2JJsFBsWA-EQ5F-XjwCdMxhX14vl-xaLwRcdMszZGN1pgxwgQy1ChThilRSUUihps-RTskTD68U7_W73VMRXa0sBhO6AaBBl7hffsExnahxizZXi035tP3FXEdHlww_1XlL_Vr9PDKbeGB6Y5QoMA36FRYB6DkmwNuSFOT1PCKLDt3Jk2_inL4O-lsnbr1qT1tlKlmbgeai9f7Ipoyu65Krl-7-QJOLroOh-W6xQAAAAB7td7YAA
