--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,12 @@ ffmpeg-python
 gitpython
 hachoir
 heroku3
-httpx==0.27.2
 motor
 pillow
 psutil
 py-tgcalls==0.9.7
 pykeyboard
-pyrofork
+pyrogram==2.0.106
 python-dotenv
 pyyaml
 requests
@@ -22,5 +21,5 @@ spotipy
 tgcrypto
 unidecode
 yt-dlp
-youtube-search
+youtube_search
 youtube-search-python
