--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,13 @@ ffmpeg-python
 gitpython
 hachoir
 heroku3
+httpx==0.27.2
 motor
 pillow
 psutil
-py-tgcalls==1.2.9
-ntgcalls==1.1.2
+py-tgcalls==0.9.7
 pykeyboard
-https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.23.zip
+pyrofork
 python-dotenv
 pyyaml
 requests
@@ -22,6 +22,5 @@ spotipy
 tgcrypto
 unidecode
 yt-dlp
-uvloop
 youtube-search
 youtube-search-python
